--- a/frank/stylesheets/scss/partials/_grid.scss
+++ b/frank/stylesheets/scss/partials/_grid.scss
@@ -79,7 +79,7 @@
 
 
 
-	img, object, embed, video { max-width: 100%; height: auto; }
+	img, video { max-width: 100%; height: auto; }
 
 	 /* Nicolas Gallagher's micro clearfix */
 	 .row:before, .row:after, .clearfix:before, .clearfix:after { content:""; display:table; }
