--- a/frank/stylesheets/scss/partials/_posts.scss
+++ b/frank/stylesheets/scss/partials/_posts.scss
@@ -1,3 +1,7 @@
+.posts {
+	margin: $row-height*4 auto;
+}
+
 .post-title {
 	font-size: $font-size-large;
 }
